overflow issue fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
   letter-spacing: 0.4px;
   font-size: 12px;
 }
+
+@media only screen and (max-width: 650px) {
+  body {
+    overflow-x: hidden;
+  }
+}
